# SDL2pp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  library.h  main_SDLTerm.cpp  main_libHexagon.cpp  main_libSDL2pp.cpp  main_libScheduling.cpp  main_libWidget.cpp  main_svg_playground.cpp  makeGitVideo.sh  proj-grep.sh  runAll.sh  todos.txt
LazyFooSDL2Tutorial/: LazyFooTut.cpp
LazyFooSDL2Tutorial/01_hello_SDL/: 01_hello_SDL.cpp
LazyFooSDL2Tutorial/02_getting_an_image_on_the_screen/: 02_getting_an_image_on_the_screen.cpp
LazyFooSDL2Tutorial/03_event_driven_programming/: 03_event_driven_programming.cpp
LazyFooSDL2Tutorial/04_key_presses/: 04_key_presses.cpp
LazyFooSDL2Tutorial/05_optimized_surface_loading_and_soft_stretching/: 05_optimized_surface_loading_and_soft_stretching.cpp
LazyFooSDL2Tutorial/06_extension_libraries_and_loading_other_image_formats/: 06_extension_libraries_and_loading_other_image_formats.cpp
LazyFooSDL2Tutorial/07_texture_loading_and_rendering/: 07_texture_loading_and_rendering.cpp
LazyFooSDL2Tutorial/08_geometry_rendering/: 08_geometry_rendering.cpp
LazyFooSDL2Tutorial/09_the_viewport/: 09_the_viewport.cpp
LazyFooSDL2Tutorial/10_color_keying/: 10_color_keying.cpp
LazyFooSDL2Tutorial/11_clip_rendering_and_sprite_sheets/: 11_clip_rendering_and_sprite_sheets.cpp
LazyFooSDL2Tutorial/12_color_modulation/: 12_color_modulation.cpp
LazyFooSDL2Tutorial/13_alpha_blending/: 13_alpha_blending.cpp
LazyFooSDL2Tutorial/14_animated_sprites_and_vsync/: 14_animated_sprites_and_vsync.cpp
LazyFooSDL2Tutorial/15_rotation_and_flipping/: 15_rotation_and_flipping.cpp
LazyFooSDL2Tutorial/16_true_type_fonts/: 16_true_type_fonts.cpp
LazyFooSDL2Tutorial/17_mouse_events/: 17_mouse_events.cpp
LazyFooSDL2Tutorial/18_key_states/: 18_key_states.cpp
LazyFooSDL2Tutorial/19_gamepads_and_joysticks/: 19_gamepads_and_joysticks.cpp
LazyFooSDL2Tutorial/22_timing/: 22_timing.cpp
LazyFooSDL2Tutorial/32_text_input_and_clipboard_handling/: 32_text_input_and_clipboard_handling.cpp
LazyFooSDL2Tutorial/33_file_reading_and_writing/: 33_file_reading_and_writing.cpp
LazyFooSDL2Tutorial/39_tiling/: 39_tiling.cpp
LazyFooSDL2Tutorial/40_texture_manipulation/: 40_texture_manipulation.cpp
LazyFooSDL2Tutorial/41_bitmap_fonts/: 41_bitmap_fonts.cpp
LazyFooSDL2Tutorial/42_texture_streaming/: 42_texture_streaming.cpp
LazyFooSDL2Tutorial/43_render_to_texture/: 43_render_to_texture.cpp
LazyFooSDL2Tutorial/44_frame_independent_movement/: 44_frame_independent_movement.cpp
LazyFooSDL2Tutorial/45_timer_callbacks/: 45_timer_callbacks.cpp
LazyFooSDL2Tutorial/46_multithreading/: 46_multithreading.cpp
LazyFooSDL2Tutorial/47_semaphores/: 47_semaphores.cpp
LazyFooSDL2Tutorial/48_atomic_operations/: 48_atomic_operations.cpp
LazyFooSDL2Tutorial/49_mutexes_and_conditions/: 49_mutexes_and_conditions.cpp
include/SDL2pp/: Error.hpp  IMG_error.hpp  Renderer.hpp  Surface.hpp  Texture.hpp  error.hpp
kiss_sdl/: kiss_example1  kiss_example2  kiss_makefile
res/: How to use this library · Issue #226 · vurtun_nuklear · GitHub.html  SDL_image 1.2.8:.html  SDL_ttf 2.0.10:.html  nuklear.html
res/kenney/: license.txt
src/: Font.cpp  Image.cpp  Image.hpp  Renderer.cpp  Renderer.hpp  SDL2.cpp  SDL2.hpp  SDL2Image.cpp  SDL2Image.hpp  SDL2Mixer.cpp  SDL2TTF.cpp  SDL2TTF.hpp  SDL2pp.cpp  SDL2pp.hpp  Surface.cpp  Surface.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  compile_time_loop.hpp  funtions1D.cpp  funtions1D.hpp  stdLib_helper.cpp  stdLib_helper.hpp
src/examples/: CMakeLists.txt
src/examples/map_editor/: CMakeLists.txt  main.cpp
src/examples/map_editor/src/: libary.cpp  libary.hpp
src/libHexagon/: CMakeLists.txt  libhex_test.cpp  main.cpp  overloaded.hpp  prototype.cpp
src/libHexagon/src/: libhex.cpp  libhex.hpp
src/libHexagon/test/: testHexagon.cpp
src/libSDL2pp/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  SDL2.cpp  SDL2.hpp  SoftwareRenderer.cpp  SoftwareRenderer.hpp  Surface.cpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  main_libSDL2pp.cpp
src/libSDL2pp/Img/: Image.hpp  ImageSurface.cpp  ImageSurface.hpp  ImageTexture.cpp  ImageTexture.hpp  SDL2Image.cpp
src/libSDL2pp/TTF/: Font.cpp  Font.hpp  SDL2TTF.cpp
src/libSDL2pp/src/: Renderer.cpp  Renderer.hpp  SDL2.cpp  SDL2.hpp  Surface.cpp  Surface.hpp  Texture.cpp  Window.cpp  Window.hpp
src/libSDL2pp/src/Img/: Error.hpp  ImageSurface.cpp  ImageSurface.hpp  ImageTexture.cpp  ImageTexture.hpp  SDL2Image.cpp
src/libSDL2pp/src/Mix/: SDL2Mixer.cpp  SDL2Mixer.hpp
src/libSDL2pp/src/Net/: SDL2Net.cpp
src/libSDL2pp/src/TTF/: Error.hpp  Font.cpp  Font.hpp  SDL2TTF.cpp  SDL2TTF.hpp
src/libSDL2pp/test/: TestEngine.cpp
src/libSchduling/: Printable.hpp  Scheduler.cpp  SchedulingStrategy.cpp  SystemTimerSubscriber.cpp
src/libScheduling/: CMakeLists.txt  Printable.cpp  Process.cpp  Process.hpp  ProcessStatistics.cpp  Scheduler.hpp  SchedulingStrategy.hpp  SystemTimer.cpp  SystemTimer.hpp  main_libScheduling.cpp
src/libScheduling/Strategies/: FirstComeFirstServedStrategy.hpp  PriorityStrategy.cpp  RoundRobinStrategy.cpp
src/libScheduling/src/: Process.cpp  Process.hpp  ProcessStatistics.hpp  SystemTimerSubscriber.hpp
src/libScheduling/src/Strategies/: ShortesJobFirstStrategy.hpp
src/libScheduling/test/: testProcess.cpp  testRoundRobin.cpp  testScheduler.cpp
src/libWidget/: Base.cpp  Base.hpp  Button.cpp  Button.hpp  CMakeLists.txt  Image.cpp  Image.hpp  Widget.cpp  Widget.hpp  Window.cpp  Window.hpp  main_libWidget.cpp
src/libWidget/src/: Base.cpp  Base.hpp  Button.cpp  Button.hpp  Image.cpp  Image.hpp  Point.hpp  PointRect.hpp  Rect.hpp  Textbox.cpp  Textbox.hpp  Window.cpp  Window.hpp
src/libWidget/test/: testWidget.cpp  testWidget_Base.cpp  testWidget_Point.cpp  testWidget_PointRect.cpp
test/: TestEngine.cpp  catchMain.cpp  test_compTimeLoop.cpp  test_smoothingFunctions.cpp
test/example/: 010-TestCase.cpp  020-TestCase-1.cpp  020-TestCase-2.cpp  100-Fix-Section.cpp  110-Fix-ClassFixture.cpp  120-Bdd-ScenarioGivenWhenThen.cpp
test/libHexagon/: testHexagon.cpp
(+42 files in other folders)
